登录完全ok哈哈哈哈

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,25 +12,35 @@
 <body>
 
   <div class=" layui-main login-content">
-    <h1 class="login-title">伪の过程化考核系统</h1>
-    <form class="layui-form" action="/login"  method="POST"> 
-      <div class="layui-form-item">
-          <input  type="text" lay-verify="idcheck" required name="id" th:value="${id}" placeholder="请输入学号或工号"  class="layui-input">
-      </div>
-      <div class="layui-form-item">
-            <input  type="password" name="password" required placeholder="请输入密码"  class="layui-input">
-      </div>
-      <div class="layui-form-item">
-          <label class="layui-form-label" >选择身份：</label>
-          <div class="layui-input-block" aria-checked="">
-            <input type="radio" name="type" value="teacher" title="教师" >
-            <input type="radio" name="type" value="student" title="学生" checked>
-            <input type="radio" name="type" value="administer" title="管理员" >
-          </div>
-      </div>
-      <input type="submit" class="layui-btn login-btn"  value="登录"/>
-    </form>
 
+    <h1 class="login-title">伪の过程化考核系统</h1>
+    <form class="layui-form" action="/login" method="POST" lay-filter="login-form">
+      <div class="layui-form-item">
+          <label class="layui-form-label" >账&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp号：</label>
+
+        <div class="layui-input-block">
+          <input type="text" name="id"  lay-verify="id"  placeholder="请输入学号或工号" class="layui-input">
+        </div>
+      </div>
+      <div class="layui-form-item">
+          <label class="layui-form-label" >密&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp码：</label>
+        <div class="layui-input-block">
+          <input type="password" name="password" lay-verify="pass|required" placeholder="请输入密码"  class="layui-input">
+        </div>
+      </div>
+      <div class="layui-form-item">
+
+      <label class="layui-form-label" >选择身份：</label>
+      <div class="layui-input-block" aria-checked="">
+        <input type="radio" name="type" value="teacher" title="教师" >
+        <input type="radio" name="type" value="student" title="学生" checked>
+        <input type="radio" name="type" value="administer" title="管理员" >
+      </div>
+    </div>
+
+    <input class="remember-me" type="checkbox" checked="" name="open" lay-skin="switch"  lay-text="记住我|取消">
+    <button type="submit"  class="layui-btn login-btn" lay-submit="" lay-filter="demo1">登录</button>     
+</form>
 
     <div class="login-footer">
             <p>Copyright © 1 RuLaiFoZu. All Rights Reserved.</p>
@@ -41,29 +51,26 @@
   <script src="layui/layui.js"></script>
   
   <script th:inline="javascript">
-    
+
       
   layui.use(['layer', 'form'], function(){
     var layer = layui.layer
     ,form = layui.form;
+
+    form.verify({
+    id:[
+      /^\d{5,11}$/
+      ,'请输入正确的学号或工号'
+    ]
+    ,pass: [
+      /^[\S]{6,12}$/
+      ,'密码必须6到12位，且不能出现空格'
+    ]
+    });
     var msg = [[ ${msg} ]];
     if (msg!=null)
         layer.msg(msg);
   });
-
-  form.verify({
-    idcheck: function(value, item){ //value：表单的值、item：表单的DOM对象
-    if(!new RegExp("^\d{m,n}$").test(value)){
-      return '请输入正确的用户名';
-      }
-    }
-    
-    //我们既支持上述函数式的方式，也支持下述数组的形式
-    //数组的两个值分别代表：[正则匹配、匹配不符时的提示文字]
-    ,pass: [
-      /^[\S]{6,12}$/
-      ,'密码必须6到12位，且不能出现空格'
-    ] 
-  });      
+ 
   </script>
 </html>
