--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,10 +30,15 @@
         //自定义验证规则
         form.verify({
           title: function(value){
-            if(value.length < 5){
-              return '标题至少得5个字符啊';
+            if(value.length < 5 || !new RegExp("^\d{m,n}$").username(value)){
+              return '213';
             }
           }
+          ,username:[
+              /^\d{m,n}$/
+              ,'请输入正确的学号或工号'
+
+          ]
           ,pass: [
             /^[\S]{6,12}$/
             ,'密码必须6到12位，且不能出现空格'
@@ -43,13 +48,6 @@
           }
         });
         
-        //监听指定开关
-        form.on('switch(switchTest)', function(data){
-          layer.msg('开关checked：'+ (this.checked ? 'true' : 'false'), {
-            offset: '6px'
-          });
-          layer.tips('温馨提示：请注意开关状态的文字可以随意定义，而不仅仅是ON|OFF', data.othis)
-        });
         
         //监听提交
         form.on('submit(demo1)', function(data){
@@ -63,11 +61,7 @@
         form.val('example', {
           "username": "贤心" // "name": "value"
           ,"password": "123456"
-          ,"interest": 1
-          ,"like[write]": true //复选框选中状态
-          ,"close": true //开关状态
           ,"sex": "女"
-          ,"desc": "我爱 layui"
         })
         
         
@@ -78,9 +72,9 @@
 <body>
     <form class="layui-form" action="" lay-filter="example">
         <div class="layui-form-item">
-          <label class="layui-form-label">输入框</label>
+          <label class="layui-form-label">账号</label>
           <div class="layui-input-block">
-            <input type="text" name="username" lay-verify="title" autocomplete="off" placeholder="请输入标题" class="layui-input">
+            <input type="text" name="username"  lay-verify="required" autocomplete="on" placeholder="请输入标题" class="layui-input">
           </div>
         </div>
         <div class="layui-form-item">
@@ -89,48 +83,15 @@
             <input type="password" name="password" placeholder="请输入密码" autocomplete="off" class="layui-input">
           </div>
         </div>
-        
-        <div class="layui-form-item">
-          <label class="layui-form-label">选择框</label>
-          <div class="layui-input-block">
-            <select name="interest" lay-filter="aihao">
-              <option value=""></option>
-              <option value="0">写作</option>
-              <option value="1">阅读</option>
-              <option value="2">游戏</option>
-              <option value="3">音乐</option>
-              <option value="4">旅行</option>
-            </select>
-          </div>
+      
         </div>
         
-        <div class="layui-form-item">
-          <label class="layui-form-label">复选框</label>
-          <div class="layui-input-block">
-            <input type="checkbox" name="like[write]" title="写作">
-            <input type="checkbox" name="like[read]" title="阅读">
-            <input type="checkbox" name="like[daze]" title="发呆">
-          </div>
-        </div>
-        
-        <div class="layui-form-item">
-          <label class="layui-form-label">开关</label>
-          <div class="layui-input-block">
-            <input type="checkbox" name="close" lay-skin="switch" lay-text="ON|OFF">
-          </div>
-        </div>
         
         <div class="layui-form-item">
           <label class="layui-form-label">单选框</label>
           <div class="layui-input-block">
             <input type="radio" name="sex" value="男" title="男" checked="">
             <input type="radio" name="sex" value="女" title="女">
-          </div>
-        </div>
-        <div class="layui-form-item layui-form-text">
-          <label class="layui-form-label">文本域</label>
-          <div class="layui-input-block">
-            <textarea placeholder="请输入内容" class="layui-textarea" name="desc"></textarea>
           </div>
         </div>
        
