--- a/src/main/resources/templates/student/index.html
+++ b/src/main/resources/templates/student/index.html
@@ -24,7 +24,7 @@
 
         
 
-        $('#course').on('click', function(){
+        $('.course').on('click', function(){
         layer.open({
           type: 2,
           title: '数值分析',
@@ -152,7 +152,6 @@
            </div>
        </div>
 </div>
-
 
 </div>
 
