查询课程有bug

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,7 +37,7 @@
         <input type="radio" name="type" value="Administer" title="管理员" >
       </div>
     </div>
-    <input type="checkbox"  class="remember-me" title="记住我" checked="">
+    <input type="checkbox" name="rememberMe"  class="remember-me" title="记住我" checked="">
     <button type="submit"  class="layui-btn login-btn" lay-submit="" lay-filter="demo1">登录</button>     
 </form>
 
