--- a/src/main/resources/templates/student/index.html
+++ b/src/main/resources/templates/student/index.html
@@ -24,19 +24,20 @@
 
       var courses = document.getElementsByName("course"); 
 
-      for (var i=0;i <courses.length;i++){
-        id =courses[i].getAttribute("id");
-        courses[i].onclick = function(){
-          layer.open({
-          type: 2,
-          title: '数值分析',
-          maxmin: true,
-          area: ['880px', '800px'],
-          content: "/student/course?courseId="+id,
-          });
-        }
+// time  2:30 end
+      fun = function(id){
+        console.log(id);
+        layer.open({
+        type: 2,
+        title: '数值分析',
+        maxmin: true,
+        area: ['880px', '800px'],
+        content: '/student/course?courseId='+id
+        });
       }
-        
+   
+// time  4:30 end   
+
       $('.id').on('click', function(){
         layer.open({
           type: 2,
@@ -140,7 +141,7 @@
             <!-- 当前课程 -->
            <div class="layui-tab-item layui-show" >
               <div th:each="course : ${student.courses}">  
-                  <div class="layui-card course " name="course" th:id="${course.id}" >  
+                  <div class="layui-card course " name="course" th:onclick="'fun('+${course.id}+')'" th:id="${course.id}" >  
                       <div class="layui-card-header course-status" >课程正常</div>
                       <div class="layui-card-body">
                         <div class="course-name" th:text="${course.name}">概率论与数理统计</div>
