--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,22 +1,4 @@
 
-.login-content{
-    width: 360px;
-    margin: auto;
-    margin-top: 10%;
-
-}
-
-.login-btn{
-    width: 360px;
-}
-.login-footer{
-
-    text-align:center;
-    margin-top: 70%;
-}
-.login-title{
-    margin: 50px;
-}
 .info-title{
     font-size: 16px;
     padding: 20px;
@@ -67,4 +49,8 @@
     width: 1000px;
     height: 100px;
     background: #009688;
+}
+.logout{
+    margin-left: 20px;
+    color: #f3faf8;
 }
