--- a/src/main/resources/templates/student/index.html
+++ b/src/main/resources/templates/student/index.html
@@ -77,7 +77,8 @@
         <!-- 侧边导航 -->
         <div class="nav">
             <div class="info-list">
-              <h1 class="info-title" th:text="${student.name}">黑富福</h1>
+              <h1 class="info-title" th:text="${student.name}">name</h1>
+              <a href='/logout' class="logout">注销</a>
                 <ul class="layui-nav layui-nav-tree layui-bg-green" lay-filter="test">
                   <li class="layui-nav-item layui-nav-itemed ">
                     <a href="javascript:;">课程通知</a>
@@ -91,7 +92,7 @@
                   <li class="layui-nav-item">
                     <a href="javascript:;">管理</a>
                     <dl class="layui-nav-child">
-                      <dd><a href="">个人信息</a></dd>
+                      <dd><a href="">个人成绩</a></dd>
                     </dl>
                   </li>
                 </ul>
