--- a/src/main/resources/templates/admin/add_course.html
+++ b/src/main/resources/templates/admin/add_course.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+x<!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>管理员首页</title>
-    <link rel="stylesheet" href="/layui/css/layui.css">
+    <link rel="stylesheet" href="../layui/css/layui.css">
     <!--引入awesome图标库的样式表-->
-    <link rel="stylesheet" href="/res/font-awesome-4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="/res/css/global.css">
+    <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="../css/global.css">
 </head>
-
+<!-- t -->
 <body>
     <!-- 你的HTML代码 -->
     <div style="padding: 20px; background-color: #F2F2F2;">
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <script src="/res/layui/layui.js"></script>
+    <script src="../layui/layui.js"></script>
     <script type="text/javascript">
         layui.use(['layer', 'element', 'carousel', 'upload', 'form', 'rate', 'laypage'], function () {
             var layer = layui.layer,
