--- a/src/main/resources/templates/admin/course.html
+++ b/src/main/resources/templates/admin/course.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>课程管理首页</title>
-  <link rel="stylesheet" href="/layui/css/layui.css">
+  <link rel="stylesheet" href="../layui/css/layui.css">
   <!--引入awesome图标库的样式表-->
-  <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.css">
-  <link rel="stylesheet" href="/css/global.css">
+  <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.css">
+  <link rel="stylesheet" href="../css/global.css">
 </head>
 
 <body style="background: #FFF; background:white url(/images/beijng.jpg) no-repeat 50% 0px; background-size:100% 100%">
@@ -22,7 +22,7 @@
 
     <!--以下包含导航栏页面-->
     <ul class="layui-nav fly-nav-user" lay-filter="demo">
-      <img style="padding-left: 400px; " src="/images/cuitlog.jpg">
+      <img style="padding-left: 400px; " src="../images/cuitlog.jpg">
 
     </ul>
     <p style="float:right; margin-right:50px">退出系统</p>
@@ -114,7 +114,7 @@
 
   </div>
 
-  <script src="/res/layui/layui.js"></script>
+  <script src="../layui/layui.js"></script>
   <script>
     //一般直接写在一个js文件中
     layui.use(['layer', 'element', 'carousel', 'form', 'rate', 'laypage'], function () {
